--- a/todo.yaml
+++ b/todo.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
       - name: todo-container
-        image: anilbidari/todo:1.0
+        image: anishbruce/todo:3
         ports:
         - containerPort: 8080
