--- a/todo.yaml
+++ b/todo.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: todo-container
-        image: anishbruce/todo:3
+        image: anishonly/todo:3
         ports:
         - containerPort: 8080
 # new line
